# imagenetx

./: .env.production  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  package-lock.json  package.json  requirements_plot.txt  setup.cfg  setup.py  site.json  tailwind.config.js
.next/: BUILD_ID  build-manifest.json  export-detail.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: next-server.js.nft.json
.next/server/: pages-manifest.json
.next/server/chunks/: 61.js  731.js  895.js
.next/server/pages/: 404.html  404.js.nft.json  500.html  [id].js  [id].js.nft.json  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json  dataset.html  home.html  home.json  (+5 more)
components/: Button.js  Footer.js  Gallery.js  Hero.js  Image.js  Video.js  _export.js
components/internal/: ColorScheme.js
imagenet_x/: __init__.py  __main__.py  aggregate.py  check_prototypes.py  evaluate.py  model_types.py  plots.py  prevalence.py  utils.py
imagenet_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
imagenet_x/annotations/: __init__.py  filename_label.csv  imagenet_1k_classes_to_100_metaclasses.csv  imagenet_x_train_multi_factor.jsonl  imagenet_x_train_top_factor.jsonl  prototypical_paths.csv
lib/: sections.js  util.js
model_predictions/base/: DINO.csv  ResNet50.csv  SimCLR.csv  ViT.csv
notebooks/: evaluate_model.ipynb  load_samples.ipynb
pages/: [id].js
plots/: DINO_dashboard.html  ResNet50_dashboard.html  SimCLR_dashboard.html
public/assets/: ViT_dashboard.html
sections/: dataset.mdx  home.mdx  paper.mdx
site/: 404.html  dataset.html  home.html  index.html  paper.html
styles/: globals.css
tests/: test_imagenet_x.py
(+159 files in other folders)
