[metadata]
name = imagenet-x
version = 0.0.1
description = Imagenet factors of variation annotations
long_description = file: README.md, LICENSE.rst
keywords = imagenet, robustness, deep learning
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Badr Youbi Idrissi; Mark Ibrahim
author_email = byoubi@meta.com; marksibrahim@meta.com

[options]
zip_safe = True
include_package_data = True
requires-python = ">=3.6"
packages = imagenet_x
install_requires =
    pandas
    scipy
    tqdm
    importlib_resources; python_version < "3.9"

[options.extras_require]
plot =
    matplotlib
    plotly
    kaleido
    tabulate
    seaborn
    scipy>=1.7.0
    pandas>=1.4.0
    jinja2
evaluate = 
    torch
    torchvision
all = 
    imagenet-x[plot]
    imagenet-x[evaluate]
dev = 
    imagenet-x[all]
    pytest
    pytest-pep8
    pytest-cov
